--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.3.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
+    "@angular/elements": "^6.0.7",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^6.3.2",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@pnp/common": "^1.1.2",
+    "@pnp/logging": "^1.1.2",
+    "@pnp/odata": "^1.1.2",
+    "@pnp/sp": "^1.1.2",
+    "@uirouter/angular": "^2.0.0",
     "core-js": "^2.5.4",
+    "document-register-element": "^1.7.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
